2016-09-22  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-538

	* Fix bug in tmatrix quad-precision calculations. avg_tmatrix was using
	the parameter file from double precision.

	* 3rdparty/tmatrix/avg_tmatrixq.f:

	Added. Import parameters from amplq.par.f instead of ampld.par.f.

	* 3rdparty/tmatrix/CMakeLists.txt:

	For quad-precision use avg_tmatrixq.f.

2016-09-17 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-537

	* src/m_rt4.cc (RT4Calc):
	Non-fortran build bugfix. Debug comments outcommented.

2016-09-17 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-537

	* src/m_rt4.cc, methods.cc (RT4Calc,RT4Init):
	Tests showed that RT4 runtime is proportional to 3rd power of number of
	angles. That means, number of angles, including the quadrature streams
	plus any extra/user angles, should be kept as low as possible.
	Therefore, I disallow user-specified angles, ie no scat_za_grid usage.
	Instead, RT4Calc returns doit_i_field on the quadrature angles (number
	to be specified by the user) plus 0/180deg if not in quadrature angles
	already to satisfy ARTS' scat_za_grid requirements. Corresponding
	scat_za_grid is output of RT4. RT4Init (e.g. sizing of doit_i_field)
	adapted accordingly.

2016-09-16 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-536

	* 3rdparty/polradtran/rt4/radtran4.f:
	Bugfix in quadrature weights setting for extra-angles. Fixes
	i_field offset issue in calcs with (many) extra-angles.

	* src/doit.cc (doit_scat_fieldNormalize):
	Be slighty more verbose about actual applied norm_error_threshold.

2016-09-15 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-535

	* src/m_rt4.cc, methods.cc (RT4Calc, RT4Init):
	Introduced usage of 'extra-angles' (ie. angles that are not
	computational streams). Work in progress.

	* 3rdparty/polradtran/rt4/radtran4.f:
	Allow 'extra-angles' for all quadrature methods, not only Gauss-Legendre.
	Govern 'extra-angle'-use via specified number of extra angles instead of